Bug fix: Layout issues

--- a/src/css/EmailsContainer.styl
+++ b/src/css/EmailsContainer.styl
@@ -1,4 +1,4 @@
 .emails-container
-  height 90%
+  height 75vh
   width 90%
   margin 30px auto 10px auto
